--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1184,7 +1184,7 @@ Arian Space:
 
 # Alcatel (alcatelmobile.com)
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034L|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU]|5002[ADF]|5003[ADG]|5006D|5007[AU]|5008[DUY]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJF]|5025[DEG]|5026[ADJ]|5027B|5028[AYD]|5029[EYD]|5030D|5032W|5033[AEFXDJGMOTXY]|5034D|5036D|5038[ADEX]|5039[D]|5041[CD]|5042[ADEFGWXT]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AYUI]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[AKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADXYZIST]|5060D|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI]|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6042D|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[XQ]|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9020A|9022X|9027[FTWX]|9203A|A(?:464BG|570BL|50[13]DL|57[17]VL|574BL)|I213|I216X|(?<!\.)80(?:82|6[78]))(?:_(?:EEA|RU))?|P360X)(?:[);/ ]|$)'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGXTL]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU]|5002[ADF]|5003[ADGU]|5006D|5007[AU]|5008[ADUYT]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJF]|5025[DEG]|5026[ADJ]|5027B|5028[AYD]|5029[EYD]|5030D|5032W|5033[AEFXDJGMOTXYQS]|5034D|5036D|5038[ADEX]|5039[D]|5041[CD]|5042[ADEFGWXT]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AYUI]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[AKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADXYZIST]|5060[AD]|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI]|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6042D|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[XQ]|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9020A|9022X|9027[FTWX]|9203A|A(?:464BG|570BL|50[13]DL|57[17]VL|574BL)|I213|I216X|(?<!\.)80(?:82|6[78]))(?:_(?:EEA|RU))?|P360X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '5022[EDX]|5070D'
@@ -1259,6 +1259,8 @@ Alcatel:
       model: 'A7 XL'
     - regex: '5002[AD]'
       model: '1B (2020)'
+    - regex: '4034T'
+      model: '1E'
     - regex: '5002F'
       model: '1A (2020)'
     - regex: '5034D'
@@ -1498,15 +1500,15 @@ Alcatel:
       model: 'Go Flip'
     - regex: '5044[GS]'
       model: 'U50'
-    - regex: '5033[ADXJEFGMOTXY]'
+    - regex: '5033[ADXJEFGMOTXYQS]'
       model: '1'
     - regex: '5009[AD]'
       model: '1C'
-    - regex: '5008[DUY]'
+    - regex: '5008[ADUYT]'
       model: '1X (2019)'
     - regex: '5007[AU]'
       model: '1V (2020)'
-    - regex: '5003[ADG]'
+    - regex: '5003[ADGU]'
       model: '1C (2019)'
     - regex: '5006D'
       model: '3C (2019)'
@@ -1522,7 +1524,7 @@ Alcatel:
       model: '1X'
     - regex: '5059S'
       model: 'Avalon V'
-    - regex: '5060D'
+    - regex: '5060[AD]'
       model: '5V'
       device: 'phablet'
     - regex: '5052[ADY]|5053[AKY]'
@@ -2401,7 +2403,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE|Touchbook M7 Pro|DASH X PLUS'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio (5.0K|5.5|View XL|Mega|C 8\+8|[CM] HD|[CGX]|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE|Touchbook M7 Pro|DASH X PLUS|C[456] 2019)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2464,6 +2466,8 @@ Blu:
       model: 'R1 HD'
     - regex: 'R1 PLUS'
       model: 'R1 Plus'
+    - regex: 'C([456]) (2019)'
+      model: 'C$1 ($2)'
     - regex: 'Tank Xtreme 5.0'
       model: 'Tank Xtreme 5.0'
     - regex: 'Tank Xtreme Pro'
@@ -3295,8 +3299,8 @@ bq:
     - regex: 'Aquaris M8'
       model: 'Aquaris M8'
       device: 'tablet'
-    - regex: 'Aquaris_A4.5'
-      model: 'Aquaris A4.5'
+    - regex: 'Aquaris_([AM])4.5'
+      model: 'Aquaris $14.5'
     - regex: 'BQ(?:ru)?[_ ]5590(?:[);/ ]|$)'
       model: 'Spring'
     - regex: 'BQ[S]?-(?:6016L|5520)(?:[);/ ]|$)'
@@ -8694,7 +8698,7 @@ LG:
       model: 'G8S ThinQ'
     - regex: '901LG(?:[);/ ]|$)'
       model: 'G8X ThinQ'
-    - regex: 'VS501'
+    - regex: 'VS501|LM-X120'
       model: 'K20'
     - regex: '(?:LG-)?H502'
       model: 'Magna'
@@ -9262,7 +9266,7 @@ Maze:
 
 # Mediacom
 Mediacom:
-  regex: '(?:SmartPad7503G|M-SP10MXA|M-PPAB500|SmartPad970s2(?:3G)?|M[_-][MPS]P[0-9a-z]+|M-IPRO[0-9a-z]+)(?:[);/ ]|$)'
+  regex: '(?:SmartPad7503G|M-SP10MXA|M-PPAB500|SmartPad970s2(?:3G)?|M[_-][MPS]P[0-9a-z]+|M-IPRO[0-9a-z]+|1AEC)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'SmartPad7503G(?:[);/ ]|$)'
@@ -9293,6 +9297,8 @@ Mediacom:
       model: 'SmartPad 875 S2 3G'
     - regex: 'M-SP1AGO3G'
       model: 'SmartPad 10 Go 3G'
+    - regex: '1AEC'
+      model: 'SmartPad 10 Eclipse'
     - regex: 'M-MP10[45][01]S2(?:[);/ ]|$)'
       model: 'SmartPad 10.1 S2'
     - regex: 'M-MP1S2[AB]3G(?:[);/ ]|$)'
@@ -12206,7 +12212,7 @@ Samsung:
       model: 'Galaxy S6 Edge'
     - regex: '(?:SAMSUNG-)?SM-G928(?:7C|R4|W8|[07ACFGIKLPSTVX])'
       model: 'Galaxy S6 Edge+'
-    - regex: '(?:SAMSUNG-)?SM-G930(?:FD|W8|[0AFKLPRSTUVX8])?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-G930(?:FD|W8|[0AFKLPRSTUVX8]|T1|AZ)?(?:[);/ ]|$)'
       model: 'Galaxy S7'
     - regex: '(?:SAMSUNG-)?SM-G935(?:R4|W8|[0AFKLPSTUVX])|SC-02H|SCV33'
       model: 'Galaxy S7 Edge'
@@ -12230,12 +12236,14 @@ Samsung:
       model: 'Galaxy S10 Lite'
     - regex: '(?:SAMSUNG-)?(?:SM-G975[0FUWNX]|SCV42|SC-04L)'
       model: 'Galaxy S10+'
-    - regex: '(?:SAMSUNG-)?SM-G970[08FUNWX](?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-G970(?:[08FUNWX]|U1)(?:[);/ ]|$)'
       model: 'Galaxy S10e'
     - regex: '(?:SAMSUNG-)?SM-G980F'
       model: 'Galaxy S20'
     - regex: '(?:SAMSUNG-)?SM-G981(?:[0BNUW]|U1)|SCG01'
       model: 'Galaxy S20 5G'
+    - regex: '(?:SAMSUNG-)?SM-G780F'
+      model: 'Galaxy S20 FE'
     - regex: '(?:SAMSUNG-)?SM-G988(?:[0BNUW]|U1)|SCG03'
       model: 'Galaxy S20 Ultra 5G'
     - regex: '(?:SAMSUNG-)?SM-G985F|SCG02'
@@ -12258,6 +12266,8 @@ Samsung:
       model: 'Galaxy Avant'
     - regex: '(?:SAMSUNG-)?SM-A015[AFGM]'
       model: 'Galaxy A01'
+    - regex: '(?:SAMSUNG-)?SM-A013M'
+      model: 'Galaxy A01 Core'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'Galaxy A2 Core'
     - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|XU|[09FGHMY])'
@@ -12324,13 +12334,13 @@ Samsung:
       model: 'Galaxy A10s'
     - regex: '(?:SAMSUNG-)?SM-(?:S102DL|A102[NWU])'
       model: 'Galaxy A10e'
-    - regex: '(?:SAMSUNG-)?SM-A115F'
+    - regex: '(?:SAMSUNG-)?SM-A115[FM]'
       model: 'Galaxy A11'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSWU]|YN|U1)|S205DL)|SC-02M|SCV46'
       model: 'Galaxy A20'
     - regex: '(?:SAMSUNG-)?SM-A215U(?:[);/ ]|$)'
       model: 'Galaxy A21'
-    - regex: '(?:SAMSUNG-)?SM-A217F(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-A217[FM](?:[);/ ]|$)'
       model: 'Galaxy A21s'
     - regex: '(?:SAMSUNG-)?SM-A202[FG]'
       model: 'Galaxy A20e'
@@ -12354,7 +12364,7 @@ Samsung:
       model: 'Galaxy A50s'
     - regex: '(?:SAMSUNG-)?SM-A507FN'
       model: 'Galaxy A50s'
-    - regex: '(?:SAMSUNG-)?SM-A515[F]'
+    - regex: '(?:SAMSUNG-)?SM-A515[FU]'
       model: 'Galaxy A51'
     - regex: '(?:SAMSUNG-)?SCG07'
       model: 'Galaxy A51 5G'
@@ -12812,7 +12822,7 @@ Senwa:
 
 # Sky or Sky Devices (skydevices.com)
 Sky:
-  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite_5_5_Octa|Platinum[_ ](?:5.0M|M5|[ABC]4|[CG]55|[BDEFG]5|P9|X|UNO|VIEW2)'
+  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite_5_5_Octa|Elite (?:M45|GO|M5Plus|T4)|Platinum[_ ](?:5.0M|M5|[ABC]4|[CG]55|[BDEFG]5|P9|X|UNO|VIEW2)'
   device: 'smartphone'
   models:
     - regex: 'Platinum_(?:5.0M|M5)'
@@ -12826,6 +12836,10 @@ Sky:
       model: 'Platinum View2'
     - regex: 'Elite_5_5_Octa'
       model: 'Elite 5.5 Octa'
+    - regex: 'Elite M5Plus'
+      model: 'Elite M5 Plus'
+    - regex: 'Elite (M45|Go|T4)'
+      model: 'Elite $1'
     - regex: 'Elite[_ ]([3-7]\.[05](?:[A-Z]{1,2})?\+?)'
       model: 'Elite $1'
     - regex: 'Fuego[_ ]([3-7]\.[05](?:[A-Z]{1,2})?\+?)'
@@ -14937,7 +14951,7 @@ Wexler:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V8[30]0|P[36]11|K420|K510S?|K130)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V8[30]0|P[36]11|K420|K510S?|K130)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?Cink Peax 2'
@@ -15010,6 +15024,8 @@ Wiko:
       model: 'Kite'
     - regex: 'W_K400'
       model: 'Lenny 5'
+    - regex: 'C210AE(?:[);/ ]|$)'
+      model: 'Life'
     - regex: 'U307AS(?:[);/ ]|$)'
       model: 'Life 2'
     - regex: '(?:WIKO-)?Lenny[ -_]?3 Max'
@@ -16608,7 +16624,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|(?:COVET|MAGNO|ONIX S|STEDI|STELLAR Z|GRAVITY Z)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|(?:COVET|MAGNO|ONIX S|STEDI|STELLAR Z|GRAVITY Z|AURA X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'COVET'
@@ -16623,6 +16639,8 @@ Zuum:
       model: 'Stellar Z'
     - regex: 'GRAVITY Z'
       model: 'Gravity Z'
+    - regex: 'AURA X'
+      model: 'Aura X'
     - regex: 'Zuum[ _-]([^;/]+) Build'
       model: '$1'
     - regex: 'Zuum[ _-]?([^;/)]+)(?:[);/ ]|$)'
@@ -18910,6 +18928,8 @@ iSWAG:
       model: 'Mantra'
     - regex: 'iSWAG[_ ]MEGA'
       model: 'Mega'
+    - regex: 'iSWAG[_ ]NEMESIS'
+      model: 'Nemesis'
 
 # Reeder (reeder.com.tr)
 Reeder:
@@ -19162,6 +19182,12 @@ Zentality:
 Diva:
   regex: '(QC-(?:703GN|704GA|803GN|1013G|7BHD))(?:[);/ ]|$)'
   device: 'tablet'
+  model: '$1'
+
+# Fortis
+Fortis:
+  regex: '(Apollo 5 Neo)(?:[);/ ]|$)'
+  device: 'smartphone'
   model: '$1'
 
 # Leff
